2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.5 ===

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* gappinfo.h: Document get_commandline vfunc

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* gunixmounts.c: Some stylistic fixes.

2009-01-08  Matthias Clasen  <mclasen@redhat.com>

	Bug 565484 – g_content_type_guess passes non-UTF8 text to XDG 
	functions in non-UTF8 locale

	* xdgmime/xdgmimecache.c:
	* xdgmime/xdgmimeglob.c: Don't assume filenames are UTF-8.

2009-01-08  Matthias Clasen  <mclasen@redhat.com>

	* xdgmime/test-mime.c: Make tests work with current shared-mime-info.

2009-01-07  Matthias Clasen  <mclasen@redhat.com>

	Bug 566770 – error code 0 for Too many open files is useless

	* gioenums.h: Add a G_IO_ERROR_TOO_MANY_OPEN_FILES error code.
	Requested by Olivier Sessink.

	* gioerror.c: Translate EMFILE to G_IO_ERROR_TOO_MANY_OPEN_FILES.

	* glocalfileenumerator.c: Translate G_FILE_ERROR_MFILE to
	G_IO_ERROR_TOO_MANY_OPEN_FILES.

2009-01-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.4 ===

2009-01-05  Dan Winship  <danw@gnome.org>

	* gdesktopappinfo.c (update_mimeapps_list): cast a "char **" to
	"const char **" to avoid a warning.

	* gemblem.c (g_emblem_from_tokens):
	* gemblemedicon.c (g_emblemed_icon_from_tokens):
	* xdgmime/xdgmime.c (xdg_mime_get_icon): remove unused
	variables

2009-01-05  Matthias Clasen <mclasen@redhat.com>

	Bug 566064 – Add NOATIME flag to query_info_flags

	* glocalfileinfo.c (get_content_type): Try using O_NOATIME when
	sniffing for mime types. Based on a patch by A. Walton

2009-01-05  Ryan Lortie  <desrt@desrt.ca>

	* tests/.gitignore: improve
	* tests/Makefile.am: add new simple-async-result test
	* tests/simple-async-result.c: new file to test GSimpleAsyncResult

2009-01-05  Ryan Lortie  <desrt@desrt.ca>

	* gio.symbols:
	* ../docs/reference/gio/gio-sections.txt:
	* gsimpleasyncresult.h:
	* gsimpleasyncresult.c: Add g_simple_async_result_is_valid().